tests/executable/errors/struct_with_array.c
void main()
{
	struct students { char names[]; int marks[]; };
	struct students st = { "stud1", { 1, 2 } };
}
